# aidevschool

./: .gitignore  .mcp.json  AGENTS.md  AI_DevSchool_Como_Funciona.pptx  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  Makefile  README.md  REFACTOR_PLAN.md  codexdojo-dashboard-snapshot.md  commit-patch.sh  commit_message.txt  learning_journal.md  project_proposal.md  pyproject.toml  setup.sh  skills-lock.json  test_pixeldojo.sh
.Codex/: napkin.md
.Jules/: palette.md
.claude/: napkin.md
.github/workflows/: ci.yml  ci.yml.rej
.jules/: bolt.md  palette.md  sentinel.md
.loops/architecture-weed/: memory.md
.loops/threejs-dojo/: ROUTING_MANIFEST.md  memory.md
.loops/threejs-dojo-coverage/: memory.md
.mavis/: learning_state.yaml
.mavis/plans/: README.md  decision-cycle-1.json  decision-cycle-2.json  decision-cycle-3.json  decision.json  miniTown.yaml  persona-atena-deliverable.md  persona-cartografo-deliverable.md  persona-critico-deliverable.md  persona-galileu-deliverable.md  persona-mestre-conteudo-deliverable.md  persona-mneme-deliverable.md  persona-mnemosyne-deliverable.md  persona-ouroboros-deliverable.md  persona-promotor-deliverable.md  persona-seneca-deliverable.md  persona-socrates-deliverable.md  persona-sonda-deliverable.md  plan-personas-agora.yaml  plan.yaml
.omo/: ralph-loop.local.md
.omo/evidence/: f2-code-quality.md  f3-manual-qa.md  f4-scope-fidelity.md  task-3-memory-curation.txt
.omo/plans/: prompt-gap-implementation.md
.omo/run-continuation/: ses_124f5193fffepkq5jAlDxqIB8v.json  ses_12808de9affemtc1B1mCZaqsK9.json  ses_1281aad45ffeWUkTMN40GRvshp.json  ses_128ad80e1ffeLiKbvzG2THEOY1.json  ses_128c26d05ffeBRteXsAgFRwfeU.json  ses_129e183a2ffeFgbtHxHFVc23aa.json  ses_131d8a758ffeQ9zct1p5B01MOz.json
.playwright-mcp/: page-2026-06-04T01-39-54-763Z.yml  page-2026-06-04T01-40-48-686Z.yml  page-2026-06-04T01-40-53-577Z.yml  page-2026-06-04T01-40-59-284Z.yml  page-2026-06-04T01-41-04-735Z.yml  page-2026-06-04T01-41-09-442Z.yml  page-2026-06-04T01-41-15-523Z.yml  page-2026-06-04T01-41-20-836Z.yml
.specs/: STATE.md
.specs/allium/: ecosystem.allium
curriculum/: AGENTS.md  BACKLOG_STATUS.md  CONTEXT.md  catalog.md
curriculum/01_rate_limiter/: AGENTS.md  benchmark.yaml  deliverable-benchmark.md  deliverable-evolution.md  deliverable-impl-go.md  deliverable-impl-node.md  deliverable-impl-rust.md  deliverable-review.md
curriculum/01_rate_limiter/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/01_rate_limiter/rust-impl/src/: client_key.rs  clock.rs  handlers.rs  lib.rs  main.rs  middleware.rs  rate_limiter.rs  response.rs
curriculum/01_rate_limiter/rust-impl/tests/: integration.rs
curriculum/02_key_value_store/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/02_key_value_store/rust-impl/src/: lib.rs  main.rs
curriculum/03_url_shortener/: PROMOTE.md
curriculum/03_url_shortener/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/03_url_shortener/rust-impl/src/: lib.rs  main.rs
curriculum/04_concurrent_task_queue/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/04_concurrent_task_queue/rust-impl/src/: lib.rs  main.rs
curriculum/04_concurrent_task_queue/rust-impl/tests/: queue_tests.rs
curriculum/05_websocket_chat/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/05_websocket_chat/rust-impl/src/: chat.rs  lib.rs  main.rs  server.rs
curriculum/05_websocket_chat/rust-impl/tests/: chat_hub.rs
curriculum/06_file_upload_pipeline/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/06_file_upload_pipeline/rust-impl/src/: lib.rs  main.rs
curriculum/06_file_upload_pipeline/rust-impl/tests/: integration.rs
curriculum/07_rest_api_auth/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/07_rest_api_auth/rust-impl/src/: lib.rs  main.rs
curriculum/08_event_driven_order_system/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/08_event_driven_order_system/rust-impl/src/: lib.rs  main.rs
curriculum/08_event_driven_order_system/rust-impl/tests/: order_system.rs
curriculum/11_load_balancer/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/11_load_balancer/rust-impl/src/: lib.rs  main.rs
curriculum/11_load_balancer/rust-impl/tests/: load_balancer.rs
curriculum/13_api_gateway_circuit_breaker/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/13_api_gateway_circuit_breaker/rust-impl/src/: lib.rs  main.rs
curriculum/13_api_gateway_circuit_breaker/rust-impl/tests/: integration.rs
curriculum/14_log_aggregator/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/14_log_aggregator/rust-impl/src/: lib.rs  main.rs
curriculum/14_log_aggregator/rust-impl/tests/: integration.rs
curriculum/15_metrics_collector/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/15_metrics_collector/rust-impl/src/: lib.rs  main.rs
curriculum/15_metrics_collector/rust-impl/tests/: integration.rs
curriculum/16_mini_message_queue/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/16_mini_message_queue/rust-impl/src/: lib.rs  main.rs
curriculum/17_distributed_config_service/rust-impl/: Cargo.toml  Dockerfile  README.md
curriculum/17_distributed_config_service/rust-impl/src/: main.rs
docs/: AGENTS.md  AI_DevSchool_Overview.docx  ARCHITECTURE_EVALUATION_2026-07-05.md  AUDIT_ENGINES_CURRICULUM_2026-07-19.md  BUG_AUDIT_2026-07-19.md  COMPONENT_DOMAIN_MAP_2026-07-08.md  DOCUMENTATION.md  DOC_ALIGNMENT_REVIEW_2026-07-19.md  DOMAIN_ANALYSIS_2026-07-08.md  FUNDAMENTOS.md  GUIA_FASES_DISPONIVEIS.md  MODULAR_DECOMPOSITION_2026-07-08.md  PLANO_EXECUCAO_2026-07-05.md  SPEC_plano_execucao.md  TECH_DEBT_AUDIT_2026-07-08.md  USER_ACTIONS_RUNBOOK.md  VISION.md
engines/: AGENTS.md  test_engine_contracts.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  aidevschool-callflow.html  gen_chunk_015.py  gen_chunk_021.py
learner/: AGENTS.md  CONTEXT.md  README.md  __init__.py  journal.md  learner_profile.md  learning_state.yaml  pipeline_status.md  pipeline_status.yaml  pitfalls.md  predictions.yaml
scripts/: write_promote_readmes.py
(+2151 files in other folders)
