[package]
name = "key-value-store-rust"
version = "0.1.0"
edition = "2021"
description = "AI DevSchool Project 02: in-memory key-value store in Rust"
license = "MIT"

[lib]
name = "key_value_store_rust"
path = "src/lib.rs"

[[bin]]
name = "key-value-store-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
