[package]
name = "url-shortener-rust"
version = "0.1.0"
edition = "2021"
description = "AI DevSchool Project 03: URL Shortener in Rust"
license = "MIT"

[lib]
name = "url_shortener_rust"
path = "src/lib.rs"

[[bin]]
name = "url-shortener-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
