[package]
name = "concurrent-task-queue-rust"
version = "0.1.0"
edition = "2021"
description = "AI DevSchool Project 04 concurrent task queue in Rust"

[lib]
name = "concurrent_task_queue_rust"
path = "src/lib.rs"

[[bin]]
name = "concurrent-task-queue-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
