[package]
name = "websocket-chat-rust"
version = "0.1.0"
edition = "2021"
description = "AI DevSchool Project 05 WebSocket chat server in Rust"

[lib]
name = "websocket_chat_rust"
path = "src/lib.rs"

[[bin]]
name = "websocket-chat-rust"
path = "src/main.rs"

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
strip = true
