[package]
name = "file-upload-pipeline-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "file_upload_pipeline_rust"
path = "src/lib.rs"

[[bin]]
name = "file-upload-pipeline-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["json", "macros", "multipart"] }
bytes = "1.6"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.38", features = ["full"] }
thiserror = "1"
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3.10"
