[package]
name = "rest-api-auth-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "rest_api_auth_rust"
path = "src/lib.rs"

[[bin]]
name = "rest-api-auth-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["json", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1.38", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
time = "=0.3.36"

[dev-dependencies]
http-body-util = "0.1"
