[package]
name = "event-driven-order-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "event_driven_order_rust"
path = "src/lib.rs"

[[bin]]
name = "event-driven-order-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
