[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

[lib]
name = "load_balancer"
path = "src/lib.rs"

[[bin]]
name = "load-balancer"
path = "src/main.rs"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
